Deleted unused class and added simple logger